[workspace]
members = [
    "integration",
    "crates/core",
    "crates/client",
    "crates/server",
    "examples/demo-server",
    "examples/simple-client",
    "examples/mqtt-client",
    "examples/simple-server",
    "examples/chess-server",
    "examples/discovery-client",
    "examples/web-client",
    "examples/event-client",
    "tools/certificate-creator"
]

# Workspace resolver still defaults to 1 for virtual workspace
# while edition 2021 crates default to 2.
resolver = "2"

[workspace.package]
version = "0.12.0"
edition = "2021"
rust-version = "1.74"

[patch.crates-io]
opcua-client = { path = "crates/client" }
opcua-core   = { path = "crates/core"   }
opcua-server = { path = "crates/server" }
