# These settings are present to demonstrate minimal binary size in release mode. Don't forget to strip the executable
# too.
[profile.release]
opt-level = 'z'
lto = true
panic = 'abort'

[workspace]
resolver = "2"
members = [
    "lib",
    "integration",
    "samples/demo-server",
    "samples/simple-client",
    "samples/mqtt-client",
    "samples/chess-server",
    "samples/discovery-client",
    "tools/certificate-creator"
]
