[package]
name = "opcua-client"
version = "0.7.0" # OPCUARustVersion
description = "OPC UA client API"
authors = ["Adam Lock <locka99@gmail.com>"]
homepage = "https://github.com/locka99/opcua"
license = "MPL-2.0"
keywords = ["opcua","opc","ua"]
categories = ["embedded","network-programming"]
readme = "../README.md"
documentation = "https://docs.rs/opcua-client/"
edition = "2018"

[badges]
travis-ci = { repository = "locka99/opcua" }
appveyor = { repository = "locka99/opcua" }

[features]
default = []
vendored-openssl = ["opcua-core/vendored-openssl"]

[dependencies]
log = "0.4"
url = "1.6"
chrono = "0.4"
time = "0.1"
serde = "1.0"
serde_derive = "1.0"
tokio = "0.1"
tokio-io = "0.1"
tokio-timer = "0.2"
tokio-codec = "0.1"
futures = "0.1"

[dependencies.opcua-types]
path = "../types"
version = "0.7.0" # OPCUARustVersion

[dependencies.opcua-core]
path = "../core"
version = "0.7.0" # OPCUARustVersion
