[package]
name = "opcua-client"
version = "0.9.0" # OPCUARustVersion
description = "OPC UA client API"
authors = ["Adam Lock <locka99@gmail.com>"]
homepage = "https://github.com/locka99/opcua"
license = "MPL-2.0"
keywords = ["opcua","opc","ua"]
categories = ["embedded","network-programming"]
readme = "../README.md"
documentation = "https://docs.rs/opcua-client/"
edition = "2018"

[badges]
travis-ci = { repository = "locka99/opcua" }
appveyor = { repository = "locka99/opcua" }

[features]
default = []
vendored-openssl = ["opcua-core/vendored-openssl"]

[dependencies]
log = "0.4"
chrono = "0.4"
serde = "1.0"
serde_derive = "1.0"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6", features = ["codec"] }
lazy_static = "1.4.0"

[dependencies.opcua-types]
path = "../types"
version = "0.9.0" # OPCUARustVersion

[dependencies.opcua-crypto]
path = "../crypto"
version = "0.9.0" # OPCUARustVersion

[dependencies.opcua-core]
path = "../core"
version = "0.9.0" # OPCUARustVersion
