[package]
name = "opcua-console-logging"
version = "0.7.0" # OPCUARustVersion
description = "Logging to the console for OPC UA used by client and server"
authors = ["Adam Lock <locka99@gmail.com>"]
homepage = "https://github.com/locka99/opcua"
license = "MPL-2.0"
keywords = ["opcua","opc","ua"]
categories = ["embedded","network-programming"]
readme = "../README.md"
edition = "2018"

[dependencies]
log = "0.4"
env_logger = "0.5"
chrono = "0.4"
lazy_static = "1.1.0"
