[package]
name = "opcua-core"
version = "0.4.0" # OPCUARustVersion
description = "Core components for OPC UA used by client and server"
authors = ["Adam Lock <locka99@gmail.com>"]
homepage = "https://github.com/locka99/opcua"
license = "MPL-2.0"
keywords = ["opcua","opc","ua"]
categories = ["embedded","network-programming"]
readme = "../README.md"

[dependencies]
log = "0.4"
chrono = "0.4"
ring = "0.12.1"
regex = "0.2"
openssl = "0.10"
serde = "1.0"
serde_yaml = "0.7"

[dependencies.opcua-types]
path = "../types"
version = "0.4.0" # OPCUARustVersion

[dev-dependencies]
tempdir = "0.3"
rustc-serialize = "0.3.24"