[package]
name = "opcua-core"
version = "0.9.0" # OPCUARustVersion
description = "Core components for OPC UA used by client and server"
authors = ["Adam Lock <locka99@gmail.com>"]
homepage = "https://github.com/locka99/opcua"
license = "MPL-2.0"
keywords = ["opcua","opc","ua"]
categories = ["embedded","network-programming"]
readme = "../README.md"
documentation = "https://docs.rs/opcua-core/"
edition = "2018"

[badges]
travis-ci = { repository = "locka99/opcua" }
appveyor = { repository = "locka99/opcua" }

[features]
default = []
vendored-openssl = ["opcua-crypto/vendored-openssl"]

[dependencies]
log = "0.4"
chrono = "0.4"
regex = "1.3"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
lazy_static = "1.4.0"
futures = "0.3"
tokio = { version = "~1.15", features = ["full"] }
tokio-util = { version = "0.6.9", features = ["codec"] }
bytes = "1.0.1"
url = "1.6"

[dependencies.opcua-types]
path = "../types"
version = "0.9.0" # OPCUARustVersion

[dependencies.opcua-crypto]
path = "../crypto"
version = "0.9.0" # OPCUARustVersion

[dev-dependencies]
tempdir = "0.3"
rustc-serialize = "0.3.24"