[package]
name = "opcua-crypto"
version = "0.8.0" # OPCUARustVersion
description = "Encryption / decryption used by OPC UA client and server"
authors = ["Adam Lock <locka99@gmail.com>"]
homepage = "https://github.com/locka99/opcua"
license = "MPL-2.0"
keywords = ["opcua","opc","ua"]
categories = ["embedded","network-programming"]
readme = "../README.md"
documentation = "https://docs.rs/opcua-core/"
edition = "2018"

[badges]
travis-ci = { repository = "locka99/opcua" }
appveyor = { repository = "locka99/opcua" }

[features]
default = []
vendored-openssl = ["openssl/vendored"]

[dependencies]
log = "0.4"
chrono = "0.4"
openssl = "0.10"
lazy_static = "1.4.0"
bytes = "0.4"
serde = "1.0"
serde_derive = "1.0"
gethostname = "0.2.1"

[dependencies.opcua-types]
path = "../types"
version = "0.8.0" # OPCUARustVersion

[dev-dependencies.opcua-console-logging]
path = "../console-logging"
version = "0.8.0" # OPCUARustVersion

[dev-dependencies]
tempdir = "0.3"
rustc-serialize = "0.3.24"