[workspace]
members = ["."]

[package]
name = "opcua-fuzz"
version = "0.0.1"
authors = ["Adam Lock <locka99@gmail.com>"]
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies.opcua-core]
path = "../core"

[dependencies.libfuzzer-sys]
git = "https://github.com/rust-fuzz/libfuzzer-sys.git"

[[bin]]
name = "fuzzer_script_1"
path = "fuzzers/fuzzer_script_1.rs"
