[package]
name = "opcua-integration"
version = "0.11.0" # OPCUARustVersion
authors = ["Adam Lock <locka99@gmail.com>"]
edition = "2018"

[dev-dependencies]
chrono = "0.4"
log = "0.4"
parking_lot = { version = "0.12", features = ["send_guard"] }

[dev-dependencies.opcua]
path = "../lib"
version = "0.11.0" # OPCUARustVersion
features = ["all"]
