[package]
name = "opcua-integration"
authors = ["Adam Lock <locka99@gmail.com>"]

version.workspace = true
rust-version.workspace = true
edition.workspace = true

[dev-dependencies]
opcua-server = { path = "../crates/server" }
opcua-core = { path = "../crates/core" }
opcua-client = { path = "../crates/client" }

log = "0.4"
chrono = "0.4"
parking_lot = "0.12.1"
env_logger = "0.10.1"
