[package]
name = "integration"
version = "0.13.0"
edition = "2021"

[lib]
name = "integration"

[dependencies]
async-trait = "0.1.80"
log = "0.4.22"
opcua = { path = "../lib", features = ["server", "client", "console-logging"] }
tokio = { version = "1.38.0", features = ["full"] }
tokio-util = "0.7.11"
