[package]
name = "opcua-server"
version = "0.4.0" # OPCUARustVersion
description = "OPC UA server API"
authors = ["Adam Lock <locka99@gmail.com>"]
homepage = "https://github.com/locka99/opcua"
license = "MPL-2.0"
keywords = ["opcua","opc","ua"]
categories = ["embedded","network-programming"]
readme = "../README.md"

[features]
default = []
http = ["hyper"]

[dependencies]
log = "0.3"
time = "0.1"
chrono = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
ring = "0.12.1"
tokio = "0.1"
tokio-io = "0.1"
tokio-timer = "0.2"
futures = "0.1"

[dependencies.hyper]
version = "0.11.2"
optional = true

[dependencies.opcua-types]
path = "../types"
version = "0.4.0" # OPCUARustVersion

[dependencies.opcua-core]
path = "../core"
version = "0.4.0" # OPCUARustVersion

[dependencies.opcua-client]
path = "../client"
version = "0.4.0" # OPCUARustVersion
