[package]
name = "opcua-server"
version = "0.5.0" # OPCUARustVersion
description = "OPC UA server API"
authors = ["Adam Lock <locka99@gmail.com>"]
homepage = "https://github.com/locka99/opcua"
license = "MPL-2.0"
keywords = ["opcua","opc","ua"]
categories = ["embedded","network-programming"]
readme = "../README.md"
documentation = "https://docs.rs/opcua-server/"

[features]
default = []
http = ["hyper"]

[dependencies]
log = "0.4"
time = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
ring = "0.13"
tokio = "0.1"
tokio-io = "0.1"
tokio-codec = "0.1"
tokio-timer = "0.2"
futures = "0.1"
bitflags = "1.0"

[dependencies.hyper]
version = "0.12"
optional = true

[dependencies.opcua-types]
path = "../types"
version = "0.5.0" # OPCUARustVersion

[dependencies.opcua-core]
path = "../core"
version = "0.5.0" # OPCUARustVersion

[dependencies.opcua-client]
path = "../client"
version = "0.5.0" # OPCUARustVersion
