[package]
name = "opcua-server"
version = "0.7.0" # OPCUARustVersion
description = "OPC UA server API"
authors = ["Adam Lock <locka99@gmail.com>"]
homepage = "https://github.com/locka99/opcua"
license = "MPL-2.0"
keywords = ["opcua","opc","ua"]
categories = ["embedded","network-programming"]
readme = "../README.md"
documentation = "https://docs.rs/opcua-server/"
edition = "2018"

[features]
default = ["generated-address-space"]
# Populates the address space with the default node set. This is something that embedded systems may or may not require.
generated-address-space = []
# Servers might want to show a web server with metric / diagnostic info
http = ["actix-web"]
# OpenSSL can be compiled and statically linked to with this feature
vendored-openssl = ["opcua-core/vendored-openssl", "opcua-client/vendored-openssl"]

[dependencies]
log = "0.4"
time = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
lazy_static = "1.1.0"
ring = "0.13"
tokio = "0.1"
tokio-io = "0.1"
tokio-codec = "0.1"
tokio-timer = "0.2"
futures = "0.1"
bitflags = "1.0"
derivative = "1.0"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "address_space"
harness = false

[dependencies.actix-web]
version = "0.7"
optional = true

[dependencies.opcua-types]
path = "../types"
version = "0.7.0" # OPCUARustVersion

[dependencies.opcua-core]
path = "../core"
version = "0.7.0" # OPCUARustVersion

[dependencies.opcua-client]
path = "../client"
version = "0.7.0" # OPCUARustVersion

[dev-dependencies.opcua-console-logging]
path = "../console-logging"
version = "0.7.0" # OPCUARustVersion
