[package]
name = "opcua-types"
version = "0.2.0"
description = "OPC UA types and constants"
authors = ["Adam Lock <locka99@gmail.com>"]
homepage = "https://github.com/locka99/opcua"
license = "MPL-2.0"
keywords = ["opcua","opc","ua"]
categories = ["embedded","network-programming"]

[dependencies]
log = "0.3"
byteorder = "0.5"
chrono = "0.4"
rand = "0.3"
regex = "0.2"
lazy_static = "0.2"
url = "1.6"
base64 = "~0.6.0"
uuid = { version = "0.5", features = ["v4"] }

[dev-dependencies]
tempdir = "0.3"