[package]
name = "opcua-types"
version = "0.4.0" # OPCUARustVersion
description = "OPC UA types and constants"
authors = ["Adam Lock <locka99@gmail.com>"]
homepage = "https://github.com/locka99/opcua"
license = "MPL-2.0"
keywords = ["opcua","opc","ua"]
categories = ["embedded","network-programming"]

[dependencies]
log = "0.3"
byteorder = "0.5"
chrono = "0.4"
serde = "1.0"
serde_derive = "1.0"
rand = "0.3"
regex = "0.2"
lazy_static = "1.0"
url = "1.6"
base64 = "~0.6.0"
uuid = { version = "0.5", features = ["v4"] }

[dev-dependencies]
tempdir = "0.3"