[package]
name = "opcua-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
chrono = "0.4.31"
futures = "0.3.29"
lazy_static = "1.4.0"
log = "0.4.20"
# Enable deadlock_detection if there are any deadlocks in sync code
parking_lot = { version = "0.12", features = ["send_guard"] }
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.34.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["codec"] }

[dependencies.opcua-core]
version = "0.12.0"
path = "../core"
