[package]
name = "opcua-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
base64 = "0.21.5"
bitflags = "1.3" # TODO: upgrade to 2.x
byteorder = "1.5.0"
bytes = "1.5.0"
chrono = "0.4.31"
foreign-types = "0.3.0" # TODO: upgrade
gethostname = "0.4.3"
lazy_static = "1.4.0"
libc = "0.2.150"
log = "0.4.20"
openssl = "0.10.60"
openssl-sys = "0.9.96"
parking_lot = "0.12.1"
regex = "1.10.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_derive = "1.0.193"
serde_json = "1.0.108"
serde_yaml = "0.9.27"
tokio-util = { version = "0.7.10", features = ["codec"] }
url = "2.5.0"
uuid = { version = "1.6.1", features = ["v4"] }
