[package]
name = "opcua-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
bytes = "1.5.0"
chrono = "0.4.31"
foreign-types = "0.3.0" # TODO: upgrade
gethostname = "0.4.3"
libc = "0.2.150"
log = "0.4.20"
openssl = "0.10.60"
openssl-sys = "0.9.96"
parking_lot = "0.12.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_yaml = "0.9.27"
tokio-util = { version = "0.7.10", features = ["codec"] }
url = "2.5.0"

[dependencies.opcua-types]
version = "0.12.0"
path = "../types"
