[package]
name = "opcua-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
bitflags = "1.3.0" # TODO: update
chrono = { version = "0.4", features = ["serde"] }
derivative = "2.2.0"
futures = "0.3.29"
lazy_static = "1.4.0"
log = "0.4.20"
# Enable deadlock_detection if there are any deadlocks in sync code
parking_lot = { version = "0.12", features = ["send_guard"] }
regex = "1.10.2"
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.34.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["codec"] }

[dependencies.serde_json]
version = "1.0.108"
optional = true

[dependencies.actix-web]
version = "0.7"
optional = true

[features]
http = ["actix-web", "serde_json"]

[dependencies.opcua-core]
version = "0.12.0"
path = "../core"

[dependencies.opcua-client]
version = "0.12.0"
path = "../client"

[dependencies.opcua-types]
version = "0.12.0"
path = "../types"
