[package]
name = "opcua-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
base64 = "0.21.5"
bitflags = "1.3" # TODO: upgrade to 2.x
byteorder = "1.5.0"
chrono = "0.4.31"
lazy_static = "1.4.0"
log = "0.4.20"
parking_lot = "0.12.1"
regex = "1.10.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.108", features = ["arbitrary_precision"] }
uuid = { version = "1.6.1", features = ["v4"] }
