[package]
name = "opcua-demo-server"
authors = ["Adam Lock <locka99@gmail.com>"]

version.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
chrono = "0.4"
log = "0.4"
log4rs = "1.2"
lazy_static = "1.4"
pico-args = "0.5"
rand = "0.7"
parking_lot = "0.12.1"

[dependencies.opcua-server]
version = "0.12.0"
path = "../../crates/server"
features = ["http"]
