[package]
name = "opcua-simple-client"
authors = ["Adam Lock <locka99@gmail.com>"]

version.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
env_logger = "0.10.1"
opcua-client = { version = "0.12.0", path = "../../crates/client" }
parking_lot = "0.12.1"
pico-args = "0.5"
tokio = { version = "1.34.0", features = ["macros"] }
