[package]
name = "opcua-simple-server"
authors = ["Adam Lock <locka99@gmail.com>"]

version.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
chrono = "0.4"
env_logger = "0.10.1"
log = "0.4"
opcua-server = { version = "0.12.0", path = "../../crates/server" }
parking_lot = "0.12.1"
