[package]
name = "opcua-web-client"
authors = ["Adam Lock <locka99@gmail.com>"]

version.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
actix = "0.7"
actix-web = "0.7"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
pico-args = "0.5"
tokio = { version = "1", features = ["full"] }

[dependencies.opcua]
path = "../../lib"
features = ["client", "console-logging"]
