[package]
name = "opcua-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.opcua]
path = ".."
features = ["console-logging"]

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "fuzz_comms"
path = "fuzz_targets/fuzz_comms.rs"
test = false
doc = false

[[bin]]
name = "fuzz_deserialize"
path = "fuzz_targets/fuzz_deserialize.rs"
test = false
doc = false
