[package]
name = "opcua-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
bytes = "1.3"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

[dependencies.opcua]
path = ".."
features = ["server", "client", "console-logging", "arbitrary"]

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "fuzz_comms"
path = "fuzz_targets/fuzz_comms.rs"
test = false
doc = false

[[bin]]
name = "fuzz_deserialize"
path = "fuzz_targets/fuzz_deserialize.rs"
test = false
doc = false
