[package]
name = "async-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
chrono = "0.4"
log = "0.4"
tokio-util = "0.7.10"
ctrlc = "3.4.4"

[dependencies.opcua]
path = "../../lib"
version = "0.13.0" # OPCUARustVersion
features = ["server", "console-logging"]
