[package]
name = "opcua-browse-client"
version = "0.9.0" # OPCUARustVersion
authors = ["Thomas Jespersen <tj@omnio.net>"]
edition = "2018"

[dependencies]
pico-args="0.3"
log = "0.4"
itertools = "0.8"

[dependencies.opcua]
path = "../../lib"
version = "0.11.0" # OPCUARustVersion
features = ["client", "console-logging", "vendored-openssl"]
