[package]
name = "opcua-chess-server"
version = "0.11.0" # OPCUARustVersion
authors = ["Adam Lock <locka99@gmail.com>"]
edition = "2018"

[dependencies]
parking_lot = { version = "0.12", features = ["send_guard"] }
uci = "0.1.1"

[dependencies.opcua]
path = "../../lib"
version = "0.11.0" # OPCUARustVersion
features = ["server", "console-logging"]
