[package]
name = "opcua-chess-server"
version = "0.13.0" # OPCUARustVersion
authors = ["Adam Lock <locka99@gmail.com>"]
edition = "2021"

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
uci = "0.1.1"

[dependencies.opcua]
path = "../../lib"
version = "0.13.0" # OPCUARustVersion
features = ["server", "console-logging"]
