[package]
name = "opcua-demo-server"
authors = ["Adam Lock <locka99@gmail.com>"]

version.workspace = true
rust-version.workspace = true
edition.workspace = true

[features]
vendored-openssl = ["opcua/vendored-openssl"]

[dependencies]
chrono = "0.4"
log = "0.4"
rand = "0.7"
log4rs = "1.2"
lazy_static = "1.4.0"
pico-args = "0.5"

[dependencies.opcua]
path = "../../lib"
features = ["all"]
