[package]
name = "opcua-demo-server"
version = "0.13.0" # OPCUARustVersion
authors = ["Adam Lock <locka99@gmail.com>"]
edition = "2021"

[features]
vendored-openssl = ["opcua/vendored-openssl"]

[dependencies]
chrono = "0.4"
log = "0.4"
rand = "0.7"
log4rs = "1.2"
lazy_static = "1.4.0"
pico-args = "0.5"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.11"

[dependencies.opcua]
path = "../../lib"
version = "0.13.0" # OPCUARustVersion
features = ["all"]
