[package]
name = "opcua-discovery-client"
version = "0.3.0" # OPCUARustVersion
authors = ["Adam Lock <locka99@gmail.com>"]

[dependencies]
clap = "2.27"

[dependencies.opcua-types]
path = "../../types"
version = "0.3.0" # OPCUARustVersion

[dependencies.opcua-client]
path = "../../client"
version = "0.3.0" # OPCUARustVersion

[dependencies.opcua-core]
path = "../../core"
version = "0.3.0" # OPCUARustVersion
