[package]
name = "opcua-discovery-client"
version = "0.6.0" # OPCUARustVersion
authors = ["Adam Lock <locka99@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33"

[dependencies.opcua-types]
path = "../../types"
version = "0.6.0" # OPCUARustVersion

[dependencies.opcua-client]
path = "../../client"
version = "0.6.0" # OPCUARustVersion

[dependencies.opcua-core]
path = "../../core"
version = "0.6.0" # OPCUARustVersion

[dependencies.opcua-console-logging]
path = "../../console-logging"
version = "0.6.0" # OPCUARustVersion