[package]
name = "opcua-discovery-client"
authors = ["Adam Lock <locka99@gmail.com>"]

version.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
pico-args = "0.5"

[dependencies.opcua]
path = "../../lib"
version = "0.12.0" # OPCUARustVersion
features = ["client", "console-logging"]
