[package]
name = "opcua-modbus-server"
version = "0.11.0" # OPCUARustVersion
authors = ["Adam Lock <locka99@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.1"
parking_lot = { version = "0.12", features = ["send_guard"] }
pico-args = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
tokio = "0.1"
tokio-core = "0.1"
tokio-modbus = { version = "0.3.5", default-features = false, features = ["tcp"] }
tokio-service = "0.1"
tokio-timer = "0.2"

[dependencies.opcua]
path = "../../lib"
version = "0.11.0" # OPCUARustVersion
features = ["server", "console-logging"]
