[package]
name = "opcua-modbus-server"
version = "0.12.0" # OPCUARustVersion
authors = ["Adam Lock <locka99@gmail.com>"]
edition = "2018"

[dependencies]
pico-args = "0.5"
tokio = "0.1"
tokio-core = "0.1"
tokio-service = "0.1"
tokio-timer = "0.2"
tokio-modbus = { version = "0.3.5", default-features = false, features = ["tcp"] }
futures = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"

[dependencies.opcua]
path = "../../lib"
version = "0.12.0" # OPCUARustVersion
features = ["server", "console-logging"]