[package]
name = "opcua-mqtt-client"
version = "0.12.0" # OPCUARustVersion
authors = ["Adam Lock <locka99@gmail.com>"]
edition = "2021"

[dependencies]
pico-args = "0.5"
rumqttc = "0.17"

[dependencies.opcua]
path = "../../lib"
version = "0.12.0" # OPCUARustVersion
features = ["client", "console-logging"]
